--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ replay_pid*
 /Backend/CuentasController/dist/
 /Backend/BBBWebService/build/
 /Backend/BBBWebService/dist/
+FrontEnd/.vs/BBBSisFrontEnd/v17/.suo
