--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ replay_pid*
 /Backend/BBBWebService/build/
 /Backend/BBBWebService/dist/
 FrontEnd/.vs/BBBSisFrontEnd/v17/.suo
+/FrontEnd/DxnSisventas/obj/Debug
+/FrontEnd/DxnSisventas/bin
