--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,8 @@ replay_pid*
 /FrontEnd/.vs/
 /FrontEnd/DxnSisventas/obj/Debug/
 /FrontEnd/DxnSisventas/bin/
+/FrontEnd/DxnSisventas/obj/Debug/BBBSistema.csproj.FileListAbsolute.txt
+/FrontEnd/.vs/BBBSisFrontEnd/v17/.suo
 
 
 
