--- a/FrontEnd/DxnSisventas/BBBSistema.csproj
+++ b/FrontEnd/DxnSisventas/BBBSistema.csproj
@@ -247,6 +247,9 @@
     <Content Include="Connected Services\BBBWebService\DxnSisventas.BBBWebService.reporteOrdenVentaPDFResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
+    <Content Include="Connected Services\BBBWebService\DxnSisventas.BBBWebService.enviarCorreoWebSinArchivoResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
     <None Include="Connected Services\BBBWebService\PersonasAPI1.wsdl" />
     <None Include="Connected Services\BBBWebService\PersonasAPI1.xsd">
       <SubType>Designer</SubType>
