servidor java en EC2

--- a/Backend/BBBWebService/nbproject/project.properties
+++ b/Backend/BBBWebService/nbproject/project.properties
@@ -25,6 +25,7 @@ dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
+endorsed.classpath=
 excludes=
 file.reference.bcrypt-0.10.2.jar=src\\java\\pe\\edu\\pucp\\BBB\\webservice\\lib\\bcrypt-0.10.2.jar
 file.reference.bytes-1.6.1.jar=src\\java\\pe\\edu\\pucp\\BBB\\webservice\\lib\\bytes-1.6.1.jar
@@ -115,7 +116,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 project.CuentasController=../CuentasController
