--- a/FrontEnd/DxnSisventas/Web.config
+++ b/FrontEnd/DxnSisventas/Web.config
@@ -24,24 +24,24 @@
    </basicHttpBinding>
   </bindings>
 		<client>
-   <endpoint address="http://localhost:8080/BBBWebService/CorreosAPI"
-    binding="basicHttpBinding" bindingConfiguration="CorreosAPIPortBinding"
-    contract="BBBWebService.CorreosAPI" name="CorreosAPIPort" />
-   <endpoint address="http://localhost:8080/BBBWebService/ReportesAPI"
-    binding="basicHttpBinding" bindingConfiguration="ReportesAPIPortBinding"
-    contract="BBBWebService.ReportesAPI" name="ReportesAPIPort" />
-   <endpoint address="http://localhost:8080/BBBWebService/CuentasAPI"
+   <endpoint address="http://3.82.221.165:8080/BBBWebService/CuentasAPI"
     binding="basicHttpBinding" bindingConfiguration="CuentasAPIPortBinding"
     contract="BBBWebService.CuentasAPI" name="CuentasAPIPort" />
-   <endpoint address="http://localhost:8080/BBBWebService/PersonasAPI"
-    binding="basicHttpBinding" bindingConfiguration="PersonasAPIPortBinding"
-    contract="BBBWebService.PersonasAPI" name="PersonasAPIPort" />
-   <endpoint address="http://localhost:8080/BBBWebService/ProductosAPI"
+   <endpoint address="http://3.82.221.165:8080/BBBWebService/ReportesAPI"
+    binding="basicHttpBinding" bindingConfiguration="ReportesAPIPortBinding"
+    contract="BBBWebService.ReportesAPI" name="ReportesAPIPort" />
+   <endpoint address="http://3.82.221.165:8080/BBBWebService/CorreosAPI"
+    binding="basicHttpBinding" bindingConfiguration="CorreosAPIPortBinding"
+    contract="BBBWebService.CorreosAPI" name="CorreosAPIPort" />
+   <endpoint address="http://3.82.221.165:8080/BBBWebService/ProductosAPI"
     binding="basicHttpBinding" bindingConfiguration="ProductosAPIPortBinding"
     contract="BBBWebService.ProductosAPI" name="ProductosAPIPort" />
-   <endpoint address="http://localhost:8080/BBBWebService/DocumentosAPI"
+   <endpoint address="http://3.82.221.165:8080/BBBWebService/DocumentosAPI"
     binding="basicHttpBinding" bindingConfiguration="DocumentosAPIPortBinding"
     contract="BBBWebService.DocumentosAPI" name="DocumentosAPIPort" />
+   <endpoint address="http://3.82.221.165:8080/BBBWebService/PersonasAPI"
+    binding="basicHttpBinding" bindingConfiguration="PersonasAPIPortBinding"
+    contract="BBBWebService.PersonasAPI" name="PersonasAPIPort" />
   </client>
 	</system.serviceModel>
 	<system.codedom>
