--- a/FrontEnd/DxnSisventas/Web.config
+++ b/FrontEnd/DxnSisventas/Web.config
@@ -14,13 +14,18 @@
 	<system.serviceModel>
 		<bindings>
    <basicHttpBinding>
-    <binding name="CuentasAPIPortBinding" />
-    <binding name="ProductosAPIPortBinding" />
-    <binding name="PersonasAPIPortBinding" />
-    <binding name="DocumentosAPIPortBinding" />
+    <binding name="CuentasAPIPortBinding" receiveTimeout="00:01:00"
+     sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
+    <binding name="ProductosAPIPortBinding" receiveTimeout="00:01:00"
+     sendTimeout="00:01:00" maxReceivedMessageSize="2147483647"/>
+    <binding name="PersonasAPIPortBinding" receiveTimeout="00:01:00"
+     sendTimeout="00:01:00" maxReceivedMessageSize="2147483647"/>
+    <binding name="DocumentosAPIPortBinding" receiveTimeout="00:01:00"
+     sendTimeout="00:01:00" maxReceivedMessageSize="2147483647"/>
     <binding name="ReportesAPIPortBinding" receiveTimeout="00:01:00"
      sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
-    <binding name="CorreosAPIPortBinding" />
+    <binding name="CorreosAPIPortBinding" receiveTimeout="00:01:00"
+     sendTimeout="00:01:00" maxReceivedMessageSize="2147483647"/>
    </basicHttpBinding>
   </bindings>
 		<client>
